--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Python
-__pycache__/
+learning_cms/__pycache__/
 *.pyc
 *.pyo
 *.pyd
@@ -11,7 +11,8 @@ env/
 ENV/
 
 # Node.js
-node_modules/
+frontend/node_modules/
+frontend/dist/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -20,6 +21,5 @@ yarn-error.log*
 .vscode/
 .idea/
 
-# Frontend
-build/
-dist/ 
+# Frontend build
+frontend/build/ 
