--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
+    "pinia": "^2.3.1",
     "vue": "^3.3.0",
     "vue-router": "^4.2.0"
   },
@@ -33,4 +35,4 @@
       "last 1 safari version"
     ]
   }
-} 
+}
